additional setup.cfg metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,33 @@
 [metadata]
 name = dt-cli
 version = attr: dtcli.__VERSION__
+description = Disruptive Technologies CLI.
+long_description_content_type = text/markdown
+long_description = file: README.md
+author = Disruptive Technologies Research AS
+author_email = developer-support@disruptive-technologies.com
+url = 
+project_urls =
+    Documentation=
+    Developers Page=https://developer.disruptive-technologies.com/docs/
+keywords =
+    disruptive
+    technologies
+    dt
+    api
+    cli
+license_file = LICENSE
+classifiers = 
+    Natural Language :: English
+    License :: OSI Approved :: MIT License
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Operating System :: OS Independent
 
 [options]
 install_requires =
