--- a/.github/workflows/test_and_lint.yaml
+++ b/.github/workflows/test_and_lint.yaml
@@ -43,7 +43,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Build distribution.
-      run: make build twine
+      run: make build
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v2
       with:
