--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -49,7 +49,7 @@ jobs:
           path: dist
       - name: Show Files
         run: ls -R
-      - name: Install Wheel
+      - name: Install from Wheel
         run: pip install dist/*.whl
       - name: Call CLI
         run: dt --version
@@ -59,6 +59,11 @@ jobs:
     needs: test_wheel
     runs-on: "ubuntu-latest"
     steps:
+      - name: Python Setup
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - run: pip install twine
       - name: Pull Build Artifact
         uses: actions/download-artifact@v3
         with:
