renamed package to 'disruptive-cli'

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = dt-cli
+name = disruptive-cli
 version = attr: dtcli.__VERSION__
 description = Disruptive Technologies CLI.
 long_description_content_type = text/markdown
