--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ version = attr: dtcli.__VERSION__
 description = Disruptive Technologies CLI.
 long_description_content_type = text/markdown
 long_description = file: README.md
-author = Disruptive Technologies Research AS
-author_email = developer-support@disruptive-technologies.com
+author = Johannes H. Gjeraker
+author_email = johannes.holm.gjeraker@disruptive-technologies.com
 url = 
 project_urls =
     Documentation=
