fix: invalid project URLs

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,8 @@ long_description_content_type = text/markdown
 long_description = file: README.md
 author = Johannes H. Gjeraker
 author_email = johannes.holm.gjeraker@disruptive-technologies.com
-url = 
+url = https://github.com/jhgjeraker/disruptive-cli
 project_urls =
-    Documentation=
     Developers Page=https://developer.disruptive-technologies.com/docs/
 keywords =
     disruptive
