--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         platform: ["ubuntu-latest"]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Python ${{ matrix.python-version }} Setup
         uses: actions/setup-python@v3
