--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.11"]
     steps:
     - uses: actions/checkout@v2
     - name: Python ${{ matrix.python-version }} Setup
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         platform: ["ubuntu-latest"]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: Python ${{ matrix.python-version }} Setup
         uses: actions/setup-python@v3
@@ -61,7 +61,7 @@ jobs:
       - name: Python Setup
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - run: pip install twine
       - name: Pull Build Artifact
         uses: actions/download-artifact@v3
